# i-have-a-plan

./: .gitignore  Makefile  README.md  agents.md  plan.md
.agents/: AGENTS.md
backend/: Makefile  README.md  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/api/: deps.py  error_handler.py
backend/src/app/api/routers/: dashboard.py  health.py  notes.py  projects.py  skills.py  tasks.py
backend/src/app/application/: __init__.py
backend/src/app/application/ports/: __init__.py  llm_port.py  sandbox_port.py
backend/src/app/application/use_cases/: __init__.py  archive_use_cases.py  parsing_use_cases.py  project_use_cases.py  reading_use_cases.py  skill_compile_use_cases.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/agent/: __init__.py  entities.py  events.py  ports.py  services.py
backend/src/app/domain/book/: __init__.py  entities.py  events.py  ports.py  services.py
backend/src/app/domain/common/: __init__.py  base_entity.py  events.py  ports.py
backend/src/app/domain/companion/: __init__.py  entities.py  events.py  ports.py  services.py
backend/src/app/domain/graph/: __init__.py  entities.py  events.py  ports.py  services.py
backend/src/app/domain/note/: __init__.py  entities.py  events.py  ports.py  services.py
backend/src/app/infrastructure/: __init__.py
backend/src/app/sidecar/: __init__.py  dense_rag.py  graph_rag.py
backend/tests/: conftest.py
backend/tests/integration/: test_health_api.py
backend/tests/unit/: test_agent_domain.py  test_companion_domain.py  test_project_domain.py
(+222 files in other folders)
